testdata/baselines/reference/submodule/conformance/checkJsdocReturnTag2.errors.txt
error TS5055: Cannot write file 'returns.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
returns.js(6,5): error TS2322: Type 'number' is not assignable to type 'string'.
returns.js(13,5): error TS2322: Type 'number | boolean' is not assignable to type 'string | number'.
  Type 'boolean' is not assignable to type 'string | number'.
returns.js(13,12): error TS2872: This kind of expression is always truthy.


!!! error TS5055: Cannot write file 'returns.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== returns.js (3 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return 5;
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    /**
     * @returns {string | number} This comment is not currently exposed
     */
    function f1() {
        return 5 || true;
        ~~~~~~
!!! error TS2322: Type 'number | boolean' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string | number'.
               ~
!!! error TS2872: This kind of expression is always truthy.
    }
    